# movegroup_interface_demo

./: CMakeLists.txt  README.md  package.xml
src/: cartesian_path.cpp  dual_pose_goal.cpp  gripper_close.cpp  gripper_control_joint_value.cpp  joint_value_goal.cpp  named_goal.cpp  pose_goal.cpp
