<?xml version="1.0"?>
<package format="2">
  <name>movegroup_interface_demo</name>
  <version>0.0.0</version>
  <description>A package designed to help learning ROS MoveIt Move Group C++ Interface</description>

  <maintainer email="karl.kruusamae@ut.ee">Karl Kruusamäe</maintainer>

  <license>3-clause BSD</license>

  <url type="website">https://github.com/ut-ims-robotics/movegroup_interface_demo</url>

  <author email="karl.kruusamae@ut.ee">Karl Kruusamäe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

</package>
